--- a/src/Tanya/appsettings.json
+++ b/src/Tanya/appsettings.json
@@ -1,22 +1,22 @@
 {
   "Tanya.Game.Apex": {
-    "framesPerSecond": 30,
+    "framesPerSecond": 144,
     "offsetsCheck": 5000,
     "offsetsRefresh": 3600000,
-    "offsetsUrl": "https://pastebin.com/raw/S0emQR6Q",
+    "offsetsUrl": "https://pastebin.com/raw/ZvfZnGkn",
     "processRefresh": 15000
   },
   "Tanya.Game.Apex.Feature.Aim": {
     "distance": 200,
-    "lockTime": 300,
-    "pitchAngle": 10,
-    "pitchDeadzone": 15,
-    "pitchSpeed": 0.3,
+    "lockTime": 400,
+    "pitchAngle": 19,
+    "pitchDeadzone": 13,
+    "pitchSpeed": 0.15,
     "recoil": 0.95,
-    "releaseTime": 300,
-    "yawAngle": 30,
-    "yawDeadzone": 5,
-    "yawSpeed": 0.85
+    "releaseTime": 800,
+    "yawAngle": 19,
+    "yawDeadzone": 13,
+    "yawSpeed": 0.15
   },
   "Tanya.Game.Apex.Feature.Sense": {
     "distance": 200
